# aoc2022

./: .gitignore  Cargo.toml  LICENSE  download.py
benches/: benches.rs
src/: aoc.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day12.rs  main.rs
