[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.10.3"
clap = {version="^4.0.27", features=["derive"]}
bitmaps = "^3.2.0"

[dev-dependencies]
criterion = "^0.4.0"

[[bench]]
name = "benches"
harness = false